fix: add custom type definitions for color-namer to resolve TS error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,11 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "include": [
+      "src",
+      "src/types" // <-- so the .d.ts file is recognized
+    ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
