--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,16 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "include": [
-      "src",
-      "src/types" // <-- so the .d.ts file is recognized
-    ]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  // Place all include patterns at the top level
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src",
+    "src/types" // for your custom .d.ts file
+  ],
   "exclude": ["node_modules"]
 }
